syntax = "proto3";
import "google/protobuf/wrappers.proto";
option go_package = "ordermanagement/proto/ecommerce";
service OrderManagement {
  // unary
  rpc addOrder(Order) returns (google.protobuf.StringValue);
  rpc getOrder(google.protobuf.StringValue) returns (Order);
  // server streaming
  rpc searchOrders(google.protobuf.StringValue) returns (stream Order);
  // client streaming
  rpc updateOrders(stream Order) returns (google.protobuf.StringValue);
  // bidirectional streaming
  rpc processOrders(stream google.protobuf.StringValue)
      returns (stream CombinedShipment);
}
message Order {
  string id = 1;
  repeated string items = 2;
  string description = 3;
  float price = 4;
  string destination = 5;
}
message CombinedShipment {
  string id = 1;
  string status = 2;
  repeated Order ordersList = 3;
}