syntax = "proto3";
import "google/protobuf/wrappers.proto";
option go_package = "productinfo/service/ecommerce";

service ProductInfo {
  rpc addProduct(Product) returns(ProductID);
  rpc getProduct(ProductID) returns(Product);
}
service OrderManagement {
  rpc searchOrders(google.protobuf.StringValue) returns(stream Order);
}

message Product {
  string id = 1;
  string name = 2;
  string description = 3;
  float price = 4;
}

message ProductID { string value = 1; }

message Order {
  string id = 1;
  repeated string items = 2;
  string description = 3;
  float price = 4;
  string destination = 5;
}